# clawpet

./: .env.example  .gitignore  ClawGotchi Phase 1 - Image Drag & D.txt  ClawPet Phase 1 - Image Drag & D.txt  LICENSE  QA_CHECKLIST_20.ko.md  QA_CHECKLIST_20.md  README.ko.md  README.md  build-debug.bat  build.bat  build.ps1  index.html  package-lock.json  package.json  pnpm-lock.yaml  progress.md  test-gateway.ps1
.github/: SECURITY.md  dependabot.yml
.github/workflows/: release.yml
apps/server/: package.json
apps/server/src/: categories.ts  gateway-listener.ts  index.ts  room-growth.ts
apps/web/: index.html  package.json
apps/web/src/: App.tsx
apps/web/src/components/: PetRoom.tsx
docs/plans/: 2026-02-25-browser-reading-design.md
scripts/: OBJECT_GEN_RULE.ko.md  OBJECT_GEN_RULE.md  batch-enrich.cjs  batch-enrich.js  build-vault-index.cjs  generate_assets.mjs  generate_cozy_pack.mjs  key_transparent.mjs  make_character_transparent.mjs  qa_20.mjs  remove-cron.sh  setup-cron.sh  uninstall.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: browser.rs  config_reader.rs  extract_page.js  image_saver.rs  lib.rs  llm_enricher.rs  main.rs  obsidian_clipper.rs  tag_ontology.rs  vault_index.rs
src/components/: CaptureOverlay.css  CaptureOverlay.tsx  Character.css  Character.tsx  ChatInput.css  ChatInput.tsx  DisconnectedOverlay.css  DisconnectedOverlay.tsx  HistoryPage.css  HistoryPage.tsx  Parchment.css  Parchment.tsx  ParchmentPage.tsx  SpeechBubble.css  SpeechBubble.tsx
src/gateway/: GatewayClient.ts  protocol.ts  textExtract.ts
src/hooks/: useAnimation.ts  useDrag.ts  useDrop.ts  useGateway.ts
src/store/: useStore.ts
src/utils/: localChatHistory.ts  renderMarkdown.tsx  uuid.ts
(+5 files in other folders)
