[package]
name = "clawgotchi"
version = "0.1.0"
edition = "2021"

[lib]
name = "clawgotchi_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
reqwest = "0.12"
base64 = "0.22"
screenshots = "0.8"
image = { version = "0.24.9", default-features = false, features = ["png", "jpeg"] }
